chore: change in configmap

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -9,9 +9,9 @@ metadata:
 data:
   NODE_ENV: "production"
   CHAIN_ID: "tripcodechain-mainnet"
-  DPoS_BLOCK_TIME: "3s"
-  DPoS_MIN_STAKE: "100000000000000000000"
-  DPoS_MAX_DELEGATES: "21"
+  DPOS_BLOCK_TIME: "3s"
+  DPOS_MIN_STAKE: "100000000000000000000"
+  DPOS_MAX_DELEGATES: "21"
   LOG_LEVEL: "info"
   P2P_BASE_PORT: "3001"
   API_BASE_PORT: "3002"
@@ -19,3 +19,8 @@ data:
   PEER_NODES: "validator-node-0.validator-node.dpos-network.svc.cluster.local:3001,validator-node-1.validator-node.dpos-network.svc.cluster.local:3001,validator-node-2.validator-node.dpos-network.svc.cluster.local:3001"
   HEALTH_CHECK_PORT: "3002"
   METRICS_PORT: "9090"
+  MCP_ENABLED: "true"
+  MCP_PORT: "3003"
+  MCP_CONFIG_PATH: "/etc/tripcodechain/mcp/config.json"
+  LLM_ENABLED: "true"
+  LLM_PROVIDER: "openai"
