--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -7,7 +7,9 @@ metadata:
     app: validator-node
 type: Opaque
 data:
-  VALIDATOR_PRIVATE_KEY: U3RCYUl0eWdNbW9rZEJHQ21sTFpjWVNNNUJqZ1Vma3hIWkFqNDQzZVlTUT0=
-  DELEGATE_PRIVATE_KEY: c3R3S2pmdHlxRHRKU3dtU0Ftc0kwb3Y2czlET2RQK2pCVUQrbks2YmhxTT0=
+  VALIDATOR_PRIVATE_KEY: aOK1OM078FRyiDITPQSp311Lhz6yroBbi5mTdRaumP8=
+  DELEGATE_PRIVATE_KEY: 4S1r95nKuLIMJ7Q5MLOmxATXdmJdwIbNBz96M2U3ALM=
   TLS_CERT: ZHVtbXktdGxzLWNlcnQtZm9yLWRldmVsb3BtZW50
   TLS_KEY: ZHVtbXktdGxzLWtleS1mb3ItZGV2ZWxvcG1lbnQ=
+  OPENAI_API_KEY: eW91ci1vcGVuYWktYXBpLWtleS1oZXJl
+  LLM_API_KEY: eW91ci1vcGVuYWktYXBpLWtleS1oZXJl
