feat: Load environment variables from .env.test or .env and define ValidatorNode structure

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,27 @@
+APP_ENV=""
+
+# Tipo de nodo
 NODE_TYPE=""
+NODE_KEY_PASSPHRASE=""
+
+# Peers iniciales para LibP2P (separados por comas)
 BOOTSTRAP_PEERS=""
+
+# Nodo semilla HTTP para registro inicial
 SEED_NODES=""
 
+# Configuración del escáner de IPs
 IP_SCANNER_ENABLED=""
 IP_SCAN_RANGES=""
+
 IP_SCAN_TARGET_PORT=""
+
+# Directorios y puertos
+DATA_DIR=""
+LOG_DIR=""
+CONFIG_DIR=""
+P2P_PORT=""
+API_PORT=""
+MCP_PORT=""
+METRICS_PORT=""
+MCP_METRICS_PORT=""
